made change to folder structure

--- a/starFrontend/src/public/Pages/Info.html
+++ b/starFrontend/src/public/Pages/Info.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <link href="./dist/output.css" rel="stylesheet">
+    <link href="../dist/output.css" rel="stylesheet">
     <title>Appointments Page</title>
-    <link rel="icon" href="./img/starClinic.jpg" alt="" type="image/x-icon" />
+    <link rel="icon" href="../img/starClinic.jpg" alt="" type="image/x-icon" />
 </head>
 <body class=" bg-slate-100 flex flex-col" onload="loadUserBookedAppointments()">
     <!---header-->
@@ -85,8 +85,8 @@
             
             <!--end of appointment details-->
 
-        <script src="./Info.js"></script>
-        <script src="./user.js"></script>
+        <script src="../scripts/Info.js"></script>
+        <script src="../scripts/user.js"></script>
         <!--AXIOS CDN-->
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <!--Start of Tawk.to Script-->
