--- a/starFrontend/src/public/Pages/index.html
+++ b/starFrontend/src/public/Pages/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--TailwindCSS-->
-    <link href="./dist/output.css" rel="stylesheet">
+    <link href="../dist/output.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400&display=swap"
         rel="stylesheet">
@@ -14,7 +14,7 @@
     <!--FlatPickr-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <title>STAR CLINIC</title>
-    <link rel="icon" href="./img/starClinic.jpg" alt="" type="image/x-icon" />
+    <link rel="icon" href="../img/starClinic.jpg" alt="" type="image/x-icon" />
 </head>
 
 <body class="" onload="load()">
@@ -84,7 +84,7 @@
             </div>
         </div>
         <!--hero-->
-        <div class="flex  justify-between mt-4 items-center" style="background-image: url('img/bg.webp');">
+        <div class="flex  justify-between mt-4 items-center" style="background-image: url('../img/bg.webp');">
             <!--Left Item-->
             <div class="m-4 flex flex-col p-3">
                 <h1 class="text-3xl font-bold mb-4">
@@ -115,7 +115,7 @@
             <div class="flex md:flex-row flex-col items-center px-6 mx-auto ">
                 <!--Img on right-->
                 <div class="md:w-1/2 mt-7">
-                    <img src="img/health staff.png" alt="">
+                    <img src="../img/health staff.png" alt="">
                 </div>
                 <!--left Item-->
                 <div class="flex flex-col mb-32 space-y-12 md:w-1/2">
@@ -134,7 +134,7 @@
                 </div>
             </div>
         </div>
-        <div class="bg-cover bg-no-repeat  mb-4 flex flex-col" style="background-image: url('./img/blue.jpg');">
+        <div class="bg-cover bg-no-repeat  mb-4 flex flex-col" style="background-image: url('../img/blue.jpg');">
             <h2 class="text-4xl font-bold text-center mb-10 md:mt-4">
                 WHAT WE OFFER.
             </h2>
@@ -142,33 +142,33 @@
                 <div>
                     <ul class="grid grid-cols-2 md:grid-cols-3 gap-4 p-4 ">
                         <li class="bg-white rounded-lg shadow-xl md:w-44">
-                            <div class=""><img src="./img/labTesting.jpg" class="w-32 md:w-32 md:ml-8" alt=""></div>
+                            <div class=""><img src="../img/labTesting.jpg" class="w-32 md:w-32 md:ml-8" alt=""></div>
                             <h2 class="text-center mt-8">Laboratory Testing</h2>
                         </li>
                         <li class="bg-white rounded-lg shadow-xl md:w-44">
-                            <div class=""><img src="./img/vaccination.jpg" class="w-32  md:w-32 md:ml-8" alt=""></div>
+                            <div class=""><img src="../img/vaccination.jpg" class="w-32  md:w-32 md:ml-8" alt=""></div>
                             <h2 class="text-center  mt-8">vaccination</h2>
                         </li>
                         <li class="bg-white rounded-lg shadow-xl md:w-44">
-                            <div class=""><img src="./img/treatment.jpg" class="w-32 md:w-24 md:ml-8" alt=""></div>
+                            <div class=""><img src="../img/treatment.jpg" class="w-32 md:w-24 md:ml-8" alt=""></div>
                             <h2 class="text-center mt-8">Treatment of common illness</h2>
                         </li>
                         <li class="bg-white rounded-lg shadow-xl md:w-44">
-                            <div class=""><img src="img/dentist.png" class="w-32 md:w-32 md:ml-8" alt=""></div>
+                            <div class=""><img src="../img/dentist.png" class="w-32 md:w-32 md:ml-8" alt=""></div>
                             <h2 class="text-center mt-8">Densitory</h2>
                         </li>
                         <li class="bg-white rounded-lg shadow-xl md:w-44">
-                            <div class=""><img src="img/mental health.png" class="w-32 md:w-32 md:ml-8" alt=""></div>
+                            <div class=""><img src="../img/mental health.png" class="w-32 md:w-32 md:ml-8" alt=""></div>
                             <h2 class="text-center mt-5">Mental Health Services</h2>
                         </li>
                         <li class="bg-white rounded-lg shadow-xl md:w-44">
-                            <div class=""><img src="./img/counselling.jpg" class="w-32 md:w-32 md:ml-8" alt=""></div>
+                            <div class=""><img src="../img/counselling.jpg" class="w-32 md:w-32 md:ml-8" alt=""></div>
                             <h2 class="text-center mt-8">Counselling</h2>
                         </li>
                     </ul>
                 </div>
                 <div class="md:w-52 w-52 mb-3">
-                    <img src="img/scientist-guy.png" class=" " alt="">
+                    <img src="./img/scientist-guy.png" class=" " alt="">
                 </div>
             </div>
         </div>
@@ -179,25 +179,25 @@
             <!--Grid Container-->
             <div class="flex items-center justify-center md:flex-row flex-col">
                 <div class="md:w-72 w-64 ">
-                    <img src="img/doctor.png" class="" alt="">
+                    <img src="../img/doctor.png" class="" alt="">
                 </div>
                 <div>
                     <!--Grid-->
                     <ul class="grid grid-cols-2 gap-4   md:p-16 md:gap-12 md:ml-10  md:grid-cols-2  ">
                         <li class="bg-white rounded-lg shadow-xl  md:w-44">
-                            <div class="h-20"><img src="img/rocket.png" class="w-32 ml-10 md:w-32 md:ml-8" alt=""></div>
+                            <div class="h-20"><img src="../img/rocket.png" class="w-32 ml-10 md:w-32 md:ml-8" alt=""></div>
                             <h2 class="text-center mt-8">Advanced Medical Technologies</h2>
                         </li>
                         <li class="bg-white rounded-lg shadow-xl md:w-44">
-                            <div class="h-20"><img src="img/24hr.png" class="w-32 ml-8 md:w-32 md:ml-8" alt=""></div>
+                            <div class="h-20"><img src="../img/24hr.png" class="w-32 ml-8 md:w-32 md:ml-8" alt=""></div>
                             <h2 class="text-center text-sm mt-8">24 hour services</h2>
                         </li>
                         <li class="bg-white rounded-lg shadow-xl md:w-44">
-                            <div class="h-20"><img src="img/doctor1.png" class="w-24 ml-8 md:w-24 md:ml-8" alt=""></div>
+                            <div class="h-20"><img src="../img/doctor1.png" class="w-24 ml-8 md:w-24 md:ml-8" alt=""></div>
                             <h2 class="text-center mt-8">Experienced Professionals</h2>
                         </li>
                         <li class="bg-white rounded-lg shadow-xl md:w-44">
-                            <div class="h-20"><img src="img/affordable-price.png" class="w-32 ml-8 md:w-32 md:ml-8"
+                            <div class="h-20"><img src="../img/affordable-price.png" class="w-32 ml-8 md:w-32 md:ml-8"
                                     alt="">
                             </div>
                             <h2 class="text-center mt-8">Affordable Prices</h2>
@@ -208,7 +208,7 @@
         </div>
         <!--About US-->
         <!--Testimonials-->
-        <div class=" bg-no-repeat bg-cover mt-5 md:max-h-full   " style="background-image: url('./img/ping.jpg');">
+        <div class=" bg-no-repeat bg-cover mt-5 md:max-h-full   " style="background-image: url('../img/ping.jpg');">
             <!-- Container to heading and testm blocks -->
             <div class="max-w-6xl px-5 mx-auto mt-32 text-center">
                 <!-- Heading -->
@@ -219,7 +219,7 @@
                 <div class="flex flex-col mt-24 md:flex-row md:space-x-6 ">
                     <!-- Testimonial 1 -->
                     <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray mb-10 md:w-1/3">
-                        <img src="./img/avatar4.jpg" class="w-16 -mt-14" alt="" />
+                        <img src="../img/avatar4.jpg" class="w-16 -mt-14" alt="" />
                         <p class="text-sm text-darkGrayishBlue">
                             “Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas, numquam? Voluptatum esse in
                             quibusdam, est a dolorum quasi.”
@@ -230,7 +230,7 @@
                     <!-- Testimonial 2 -->
                     <div
                         class=" flex flex-col items-center p-6 space-y-6 rounded-lg mb-10 bg-veryLightGray md:w-1/3  md:flex">
-                        <img src="img/avatar1.png" class="w-16 -mt-14" alt="" />
+                        <img src="../img/avatar1.png" class="w-16 -mt-14" alt="" />
                         <p class="text-sm text-darkGrayishBlue">
                             “Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut, delectus velit. Expedita,
                             quisquam
@@ -242,7 +242,7 @@
                     <!-- Testimonial 3 -->
                     <div
                         class="flex flex-col items-center p-6 space-y-6 rounded-lg mb-10 bg-veryLightGray md:w-1/3  md:flex">
-                        <img src="./img/profile.jpg" class="w-16 -mt-14" alt="" />
+                        <img src="../img/profile.jpg" class="w-16 -mt-14" alt="" />
                         <p class="text-sm text-darkGrayishBlue">
                             “Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, libero repudiandae nisi
                             dicta
@@ -257,7 +257,7 @@
             </div>
 
         </div>
-        <div class="mt-3" style="background-image: url('img/bg.webp')">
+        <div class="mt-3" style="background-image: url('../img/bg.webp')">
             <h2 class="text-4xl font-bold text-center mb-10 md:pt-4">
                 Request Appointment.
             </h2>
@@ -268,7 +268,7 @@
 
                     <!--Img on right-->
                     <div class="md:w-1/2 ">
-                        <img src="img/contact-us.png" alt="">
+                        <img src="../img/contact-us.png" alt="">
                     </div>
 
                     <div
@@ -357,8 +357,8 @@
     <!--Ionicons-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <!--js-->
-    <script src="./index.js"></script>
-    <script src="./submitAppointment.js"></script>
+    <script src="../scripts/index.js"></script>
+    <script src="../scripts/submitAppointment.js"></script>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
         var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
@@ -372,30 +372,6 @@
         })();
     </script>
     <!--End of Tawk.to Script-->
-    <!--End of Tawk.to Script-->
-    <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.11.0/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.11.0/firebase-analytics.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-            apiKey: "AIzaSyA94OnM2HP43pcWwRDs-YetMU5mKKeIKbk",
-            authDomain: "starclinc.firebaseapp.com",
-            projectId: "starclinc",
-            storageBucket: "starclinc.appspot.com",
-            messagingSenderId: "889076597511",
-            appId: "1:889076597511:web:c35971ce8cb5f4576ffba2",
-            measurementId: "G-BPGCETSEV2"
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
-    </script>
 </body>
 
 </html>
