--- a/starFrontend/src/public/Pages/AccountRecovery.html
+++ b/starFrontend/src/public/Pages/AccountRecovery.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--TailwindCSS-->
-    <link href="./dist/output.css" rel="stylesheet">
+    <link href="../dist/output.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400&display=swap"
         rel="stylesheet">
@@ -13,16 +13,16 @@
     <!--FlatPickr-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <title>Account Recovery</title>
-    <link rel="icon" href="./img/starClinic.jpg" alt="" type="image/x-icon" />
+    <link rel="icon" href="../img/starClinic.jpg" alt="" type="image/x-icon" />
 </head>
 <body>
     <div class="flex h-screen">
             <div class="bg-blue-200 flex-1  hidden md:flex">
-                <img src="./img/Hospital room-rafiki.png" alt="" />
+                <img src="../img/Hospital room-rafiki.png" alt="" />
             </div>
             <div class=" flex flex-1 flex-col min-h-screen justify-center items-center ">
                     <div class="justify-center flex flex-col items-center">
-                        <img src="./img/starClinic.jpg" class="w-40" alt="tailus logo">
+                        <img src="../img/starClinic.jpg" class="w-40" alt="tailus logo">
                         <p class="font-medium text-lg text-sky-600">AccountRecovery</p>
                     </div>
                     <div class=" p-2 ">
@@ -39,7 +39,7 @@
             </div>
        
     </div>
-    <script src="./AccountRecovery.js"></script>
+    <script src="../scripts/AccountRecovery.js"></script>
     <!--AXIOS CDN-->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
