--- a/starFrontend/src/public/Pages/PasswordReset.html
+++ b/starFrontend/src/public/Pages/PasswordReset.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./dist/output.css" rel="stylesheet">
+    <link href="../dist/output.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400&display=swap"
         rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <script defer src="https://unpkg.com/alpinejs@3.10.2/dist/cdn.min.js"></script>
-    <link rel="icon" href="./img/starClinic.jpg" alt="" type="image/x-icon" />
+    <link rel="icon" href="../img/starClinic.jpg" alt="" type="image/x-icon" />
     <title>ResetPassword</title>
 </head>
 <body>
     <div class="flex h-screen">
             <div class="bg-blue-200 flex-1  hidden md:flex">
-                <img src="./img/Hospital room-rafiki.png" alt="" />
+                <img src="../img/Hospital room-rafiki.png" alt="" />
             </div>
             <div class=" flex flex-1 flex-col min-h-screen justify-center items-center ">
                 <div class="justify-center flex flex-col items-center">
-                    <img src="./img/starClinic.jpg" class="w-40" alt="tailus logo">
+                    <img src="../img/starClinic.jpg" class="w-40" alt="tailus logo">
                     <p class="font-medium text-lg text-sky-600">Reset Password</p>
                 </div>
                 <div class="p-4">
@@ -37,7 +37,7 @@
                 </div>
             </div>
     </div>
-    <script src="./PasswordReset.js"></script>
+    <script src="../scripts/PasswordReset.js"></script>
         <!--AXIOS CDN-->
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
